# oc14-medical-triage-llm

./: .gitignore  IMPLEMENTATION_PLAN.md  LIVRABLES.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  deploy-space.yml
data/cards/: DATA_CARD.md  METADATA_SCHEMA.md  anonymization_audit.json
data/kaggle_upload/: dataset-metadata.json  sft_val.jsonl  triage_eval_gold.jsonl
data/kaggle_upload_v10/: dpo_train.jsonl  dpo_val.jsonl  sft_val.jsonl
deploy/hf-space/: README.md  app.py  requirements.txt  sync_space.py
docs/: ARCHITECTURE_AND_DECISIONS.md  CLOSEOUT.md  DEMO_RUNBOOK.md  DEVELOPMENT_JOURNAL.md  KNOWN_ISSUES.md  MENTOR_BRIEF.md  MENTOR_SHOWCASE.md  OC14-links.md  RAPPORT_FR.md  REPORT_LIMITATIONS.md  SOUTENANCE_QA.md  TRIAGE_CRITERIA.md
docs/research/: 00-OVERALL-APPROACH.md  00b-overall-approach-DRAFT-prechallenge.md  01-qwen3-1.7b-base-model.md  02-unsloth-sft-dpo-qwen3.md  03-trl-peft-sft-dpo-guide.md  04-oc14-dataset-construction-recipe.md  05-serving-deployment-vllm-runpod.md  06-presidio-anonymization-gdpr-medical-dataset.md  07-reference-notebooks-and-repos.md  09-red-team-challenges.md  (+2 more)
notebooks/: build_kaggle_notebooks.py
scripts/: ablation_overtriage.py  build_dpo_pairs.py  build_retrain_sft.py  build_sft_v10.py  log_eval_to_wandb.py  runpod_experiments.py
serving/: Dockerfile  Dockerfile.agent  README.md
tests/: test_anonymization.py  test_anonymize_audit.py  test_backend.py  test_build_sft_v10.py  test_data_build.py  test_graph.py  test_labeling.py  test_metrics.py  test_next_field.py  test_questionnaire.py  test_runpod.py  test_service.py  test_serving.py  test_sih.py  test_store.py  test_templates.py  test_ui.py  test_validation.py
(+60 files in other folders)
