[project]
name = "oc14-triage"
version = "0.1.0"
description = "OC14 — bilingual (FR/EN) medical-triage assistant: data prep, training, eval and serving for a Qwen3-1.7B SFT+LoRA+DPO proof-of-concept."
requires-python = ">=3.12"
# Core deps cover data preparation + evaluation, which run CPU-only on the P710.
# Training deps (unsloth/trl/peft/transformers/torch) run on a Kaggle/Colab GPU and are
# intentionally NOT installed here — see notebooks/ and IMPLEMENTATION_PLAN.md.
dependencies = [
    "datasets>=2.19",
    "pandas>=2.2",
    "pyarrow>=16",
    "huggingface-hub>=0.23",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Anonymisation / GDPR verification step (heavier: pulls spaCy + models). Install on demand.
anon = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]
# Evaluation metrics.
eval = ["scikit-learn>=1.4"]
# Local serving wrapper (FastAPI in front of vLLM).
serving = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "httpx>=0.27", "openai>=1.30"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oc14_triage"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Builders that embed long inline content (CSS/JS, or notebook cell source) — E501 not meaningful.
"docs/research/build_report_html.py" = ["E501"]
"notebooks/build_kaggle_notebooks.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
